done!!! added details on small board & fixed back button

--- a/src/sections/FAQ/FAQ.css
+++ b/src/sections/FAQ/FAQ.css
@@ -9,7 +9,7 @@
 .board-container {
   display: flex; justify-content: center; align-items: center; width: 100%; padding-top: 22vh; padding-bottom: 12vh; box-sizing: border-box; }
 
-.board-small-frame { position: relative; display: inline-block; width: min(90vw, 800px); cursor: pointer;  left: 3vw; transition: transform 0.3s ease; line-height: 0; animation: pulse 2s infinite ease-in-out; }
+.board-small-frame { position: relative; display: inline-block; width: min(90vw, 1000px); cursor: pointer;  left: 3vw; transition: transform 0.3s ease; line-height: 0; animation: pulse 2s infinite ease-in-out; }
 
 @keyframes pulse {
   0% { transform: scale(1); }
@@ -20,6 +20,7 @@
 .board-small {width: 100%; height: auto; display: block; }
 
 .board-small-overlay {position: absolute; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none; }
+
 
 .mini-page {position: absolute; height: auto; display: block; filter: drop-shadow(2px 4px 6px rgba(0,0,0,0.3)); }
 
@@ -68,7 +69,7 @@
    ================ */
 @media (max-width: 768px) {
   .board-container { padding: 60px 20px; }
-  .board-small-frame { width: min(60vw, 250px); left: 15; }
+  .board-small-frame { width: min(50vw, 250px); left: 15; }
   
   .board-frame { width: 98vw; height: 98vh; }
   .board-big { width: 100% !important; height: 100% !important; }
